docs/api/qiskit/0.19/qiskit.circuit.library.YGate.mdx
---
title: YGate (v0.19)
description: API reference for qiskit.circuit.library.YGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.YGate
---

# YGate

<Class id="qiskit.circuit.library.YGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/y.py" signature="YGate(label=None)" modifiers="class">
  The single-qubit Pauli-Y gate ($\sigma_y$).

  **Matrix Representation:**

$$
\begin{split}Y = \begin{pmatrix}
0 & -i \\
i & 0
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ Y ├
       └───┘
  ```

  Equivalent to a $\pi$ radian rotation about the Y axis.

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RY(\pi)$ and $Y$.

$$
\begin{split}RY(\pi) = \begin{pmatrix}
0 & -1 \\
1 & 0
\end{pmatrix}
= -i Y\end{split}
$$
  </Admonition>

  The gate is equivalent to a bit and phase flip.

$$
\begin{split}|0\rangle \rightarrow i|1\rangle \\
|1\rangle \rightarrow -i|0\rangle\end{split}
$$

  Create new Y gate.

  ## Attributes

  <span id="ygate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.YGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="ygate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.YGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="ygate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.YGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="ygate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.YGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="ygate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.YGate.add_decomposition" signature="YGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="ygate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.YGate.assemble" signature="YGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="ygate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.YGate.broadcast_arguments" signature="YGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="ygate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.YGate.c_if" signature="YGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="ygate-control" />

  ### control

  <Function id="qiskit.circuit.library.YGate.control" signature="YGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-Y gate.

    One control returns a CY gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="ygate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.YGate.copy" signature="YGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="ygate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.YGate.inverse" signature="YGate.inverse()">
    Return inverted Y gate ($Y{\dagger} = Y$)
  </Function>

  <span id="ygate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.YGate.is_parameterized" signature="YGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="ygate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.YGate.mirror" signature="YGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="ygate-power" />

  ### power

  <Function id="qiskit.circuit.library.YGate.power" signature="YGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="ygate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.YGate.qasm" signature="YGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="ygate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.YGate.repeat" signature="YGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="ygate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.YGate.to_matrix" signature="YGate.to_matrix()">
    Return a numpy.array for the Y gate.
  </Function>
</Class>

